fix(Launcher): Fix project directory name being clipped vertically

--- a/desktop/src/renderer/components/app-launcher/app-launcher.css
+++ b/desktop/src/renderer/components/app-launcher/app-launcher.css
@@ -77,7 +77,7 @@ main {
   }
 
   .name {
-    @apply text-sm leading-none truncate inline-block m-0;
+    @apply text-sm leading-tight truncate inline-block m-0;
   }
 
   .path {
